# Basic-Ray-Tracer

./: CMakeLists.txt  Makefile  README.md  depend  fshader.glsl  global.h  object.cpp  object.h  rayT  raycast.cpp  scene.cpp  scene.h  sphere.cpp  sphere.h  trace.cpp  trace.h  vector.cpp  vector.h  vshader.glsl
include/: Angel.h
